deploy: 46b1b0eb104ec1df8702bfae7a77d1f329be3f3c

--- a/blogs/events/index.html
+++ b/blogs/events/index.html
@@ -48,7 +48,7 @@
     <meta name="renderer" content="webkit">
 
     <!-- Title -->
-    <title>Category: events | Asian Social Simulation Association</title>
+    <title>Asian Social Simulation Association</title>
 
     <!-- Favicons -->
     <link rel="icon" type="image&#x2F;ico" href="/img/favicon.ico">
@@ -139,7 +139,7 @@
     <meta name="mobile-web-app-capable" content="yes"><meta name="application-name" content="Asian Social Simulation Association"><meta name="msapplication-starturl" content="https://www.computationalsocialscience.net"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-title" content="Asian Social Simulation Association"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- ### The Open Graph & Twitter Card Protocol ### -->
-    <meta property="og:title" content="Category: events | Asian Social Simulation Association"><meta property="og:site_name" content="Asian Social Simulation Association"><meta property="og:type" content="website"><meta property="og:url" content="https://www.computationalsocialscience.net/blogs/events/"><meta property="og:locale" content="en"><meta name="description" content="John Doe - Asian Social Simulation Association">
+    <meta property="og:title" content="Asian Social Simulation Association"><meta property="og:site_name" content="Asian Social Simulation Association"><meta property="og:type" content="website"><meta property="og:url" content="https://www.computationalsocialscience.net/blogs/events/"><meta property="og:locale" content="en"><meta name="description" content="John Doe - Asian Social Simulation Association">
 
     
 
