--- a/events/ISSS/index.html
+++ b/events/ISSS/index.html
@@ -336,11 +336,11 @@
         <div class="col-8 card-body-content">
             <a href="/events/ISSS/ISSS2024/" title="Read more">
                 
-                    International Symposium on Social Simulation 2024
-The 2nd Asian Social Simulation Association Annual Conference
-Agenda
+                    The 2nd Asian Social Simulation Association Annual Conference
+International Symposium on Social Simulation 2024
+Call for Papers
 
-In the wave of rapid development of artificial intelligence technology and the transformation of societal intelligence transformation, agent-based simulation, as a key tool to explore complex social phenomena and dynamics, represents a new paradigm of scientific research. The 2024 International Symposium on Social Simulation (ISSS) will focus on the frontier advancement in the field of agent-based simulation, particularly large-scale social simulator:“AI Society”. The symposium aims to explore innovative applications of agent technology, the precise construction of simulation models, the potential and limitations of simulator devices in addressing challenges across various social scenarios, and the new modes of governance in an intelligent society where humans, robots, and objects coexist. Through in-depth communication at the symposium, we hope to inspire new rese...
+1. Background and ThemeIn the wave of rapid development of artificial intelligence technology and the transformation of societal intelligence transformation, agent-based simulation, as a key tool to explore complex social phenomena and dynamics, represents a new paradigm of scientific research. The 2nd Asian Social Simulation Association (ASSA) Annual Conference and the International Symposium on Social Simulation (ISSS) 2024 will be held on August 24 at the PKU-Wuhan Institute for Artificial Intelligence. The symposium will focus on the frontier advancement in the field of agent-based simulation, particularly large-scale social simulator: “AI Society”, and aims to explore innovative applications of agent technology, the precise construction of simulation models, the potential and limitations of simulator devices in addressing challenges across various soc...
                 
             </a>
         </div>
